
[TestCSVPresenter - 1]
Name,Installed,Fixed-In,Type,Vulnerability,Severity,EPSS%,Risk,Annotations
package-1,1.1.1,"1.2.1, 2.1.3, 3.4.0",rpm,CVE-1999-0001,Low,42.00%,1.7,
package-2,2.2.2,,deb,CVE-1999-0002,Critical,53.00%,96.3,(kev)

---

[TestEmptyCSVPresenter - 1]
Name,Installed,Fixed-In,Type,Vulnerability,Severity,EPSS%,Risk,Annotations

---

[TestHidesIgnoredMatches - 1]
Name,Installed,Fixed-In,Type,Vulnerability,Severity,EPSS%,Risk,Annotations
package-1,1.1.1,"1.2.1, 2.1.3, 3.4.0",rpm,CVE-1999-0001,Low,42.00%,1.7,
package-2,2.2.2,,deb,CVE-1999-0002,Critical,53.00%,96.3,(kev)

---

[TestDisplaysIgnoredMatches - 1]
Name,Installed,Fixed-In,Type,Vulnerability,Severity,EPSS%,Risk,Annotations
package-1,1.1.1,"1.2.1, 2.1.3, 3.4.0",rpm,CVE-1999-0001,Low,42.00%,1.7,
package-2,2.2.2,,deb,CVE-1999-0002,Critical,53.00%,96.3,(kev)
package-2,2.2.2,,deb,CVE-1999-0001,Low,42.00%,1.7,(suppressed)
package-2,2.2.2,,deb,CVE-1999-0002,Critical,53.00%,96.3,"(kev, suppressed)"
package-2,2.2.2,,deb,CVE-1999-0004,High,75.00%,2.2,(suppressed by VEX)

---

[TestDisplaysDistro - 1]
Name,Installed,Fixed-In,Type,Vulnerability,Severity,EPSS%,Risk,Annotations
package-1,1.1.1,"1.2.1, 2.1.3, 3.4.0",rpm,CVE-1999-0001,Low,42.00%,1.7,(ubuntu:2.5)
package-2,2.2.2,,deb,CVE-1999-0002,Critical,53.00%,96.3,"(kev, ubuntu:3.5)"

---

[TestDisplaysIgnoredMatchesAndDistro - 1]
Name,Installed,Fixed-In,Type,Vulnerability,Severity,EPSS%,Risk,Annotations
package-1,1.1.1,"1.2.1, 2.1.3, 3.4.0",rpm,CVE-1999-0001,Low,42.00%,1.7,(ubuntu:2.5)
package-2,2.2.2,,deb,CVE-1999-0002,Critical,53.00%,96.3,"(kev, ubuntu:3.5)"
package-2,2.2.2,,deb,CVE-1999-0001,Low,42.00%,1.7,"(ubuntu:2.5, suppressed)"
package-2,2.2.2,,deb,CVE-1999-0002,Critical,53.00%,96.3,"(kev, ubuntu:3.5, suppressed)"
package-2,2.2.2,,deb,CVE-1999-0004,High,75.00%,2.2,(suppressed by VEX)

---
